--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -1,23 +1,25 @@
 <div class="top-bar">
-	<%= link_to image_tag('wikicleta-logo-navbar.png', :size => '175x45', :class => 'logo'), root_path %>
-	<ul class="to-right">
-		<% if current_path == discover_index_url %>
-			<li><%= link_to t('app.profiles.navbar.curated_trips'), trips_path, :class => 'back' %></li>
-		<% elsif current_path == trips_url %>
-			<li><%= link_to t('app.profiles.navbar.explore'), discover_index_path, :class => 'back' %></li>
-		<% end %>
-		<li><%= link_to t('app.profiles.navbar.new_route'), new_route_path, :class => 'back' %></li>
-		<li><%= link_to t('app.profiles.navbar.new_group'), new_cycling_group_path, :class => 'back' %></li>
-		<% if user_signed_in? %>
-			<% if current_user.can_contribute_to_city? %>
-  			<li><%= link_to t('app.profiles.navbar.new_path'), new_cycle_path_path, :class => 'back' %></li>
+	<div class="content">
+		<%= link_to image_tag('wikicleta-logo-navbar.png', :size => '175x45', :class => 'logo'), root_path %>
+		<ul class="to-right">
+			<% if current_path == discover_index_url %>
+				<li><%= link_to t('app.profiles.navbar.curated_trips'), trips_path, :class => 'back' %></li>
+			<% elsif current_path == trips_url %>
+				<li><%= link_to t('app.profiles.navbar.explore'), discover_index_path, :class => 'back' %></li>
 			<% end %>
+			<li><%= link_to t('app.profiles.navbar.new_route'), new_route_path, :class => 'back' %></li>
+			<li><%= link_to t('app.profiles.navbar.new_group'), new_cycling_group_path, :class => 'back' %></li>
+			<% if user_signed_in? %>
+				<% if current_user.can_contribute_to_city? %>
+	  			<li><%= link_to t('app.profiles.navbar.new_path'), new_cycle_path_path, :class => 'back' %></li>
+				<% end %>
 			
-			<li class="with-left-divider <%= is_section_active?('profiles') %>"><%= link_to "<i class='icon-user'></i> #{current_user.username}".html_safe, 
-										user_profile_path(current_user.username) %></li>
-			<li><%= link_to t('app.navbar.close_session'), destroy_user_session_path, :method => :delete %></li>
-		<% else %>
-			<li class="with-left-divider"><%= link_to t('app.navbar.login'), new_user_session_path  %></li>
-		<% end %>
-	</ul>
+				<li class="with-left-divider <%= is_section_active?('profiles') %>"><%= link_to "<i class='icon-user'></i> #{current_user.username}".html_safe, 
+											user_profile_path(current_user.username) %></li>
+				<li><%= link_to t('app.navbar.close_session'), destroy_user_session_path, :method => :delete %></li>
+			<% else %>
+				<li class="with-left-divider"><%= link_to t('app.navbar.login'), new_user_session_path  %></li>
+			<% end %>
+		</ul>
+	</div>
 </div>
