Solved Issues #52 and #51

--- a/app/assets/stylesheets/shared/main.css.scss
+++ b/app/assets/stylesheets/shared/main.css.scss
@@ -14,6 +14,15 @@ font-family: "gothamrndbold-Bold";
    src:url("/assets/gothamrndbold.ttf");
 }
 
+/* Bootstrap Css Map Fix*/
+#map img { 
+  max-width: none;
+}
+/* Bootstrap Css Map Fix*/
+#map label { 
+  width: auto; display:inline; 
+}
+
 body, html {
 	font-family: "gothamrndbook-Book";
 	height: 100%;
