Updated landing page with stickers and download link

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -173,10 +173,10 @@
 		<p class="title text-center"><%= t('app.views.landing.download.title') %></p><br/>
 		<br/><br/>
 		<%= link_to image_tag('android-available.png', :size => '230x230'), 'https://play.google.com/store/apps/details?id=org.wikicleta&hl=en', :target => "_blank" %>
-		<%= link_to image_tag('available-ios.png'), 'javascript:void(0);', :target => "_blank" %>
+		<%= link_to image_tag('ios-available.png', :size => '230x230'), 'https://itunes.apple.com/us/app/wikicleta/id806904029?mt=8', :target => "_blank" %>
 		<div class="invitation">
-			<p class="subtitle text-center"><%= t('app.views.landing.download.ios') %></p>
-			<p class="action shadow-lighter rounded-5"><%= link_to t('app.views.landing.join'), new_user_session_path, :id => 'join-wikicleta' %></p>
+			<p class="subtitle text-center"><%= t('app.views.landing.download.stickers') %></p>
+			<%= link_to image_tag('stickers.png', :size => '280x280'), 'https://drive.google.com/a/wikicleta.com/file/d/0B1lCNtgccrdncGNHbzI1S2pCTUU/edit?usp=sharing', :target => "_blank"  %>
 		</div>
 	</div>
 </div>
