--- a/app/views/routes/_route.html.erb
+++ b/app/views/routes/_route.html.erb
@@ -1,21 +1,23 @@
-<div id="<%= route.identifier %>" class="route poi" 
-	data-kind="route_start-marker" 
-	data-lat="<%= route.origin_coordinate.lat %>" 
-	data-lon="<%= route.origin_coordinate.lon %>" 
-	data-path="<%= route.to_points_list %>"
-	data-end-lat="<%= route.end_coordinate.lat %>" 
-	data-end-lon="<%= route.end_coordinate.lon %>">
-	<div class="inner-panel">
-		<p class="metrics"><span class="value"><%= '%.2f' % route.kilometers %></span><span class="unit">KM</span></p>
+<% cache(route) do %>
+	<div id="<%= route.identifier %>" class="route poi" 
+		data-kind="route_start-marker" 
+		data-lat="<%= route.origin_coordinate.lat %>" 
+		data-lon="<%= route.origin_coordinate.lon %>" 
+		data-path="<%= route.digested_path %>"
+		data-end-lat="<%= route.end_coordinate.lat %>" 
+		data-end-lon="<%= route.end_coordinate.lon %>">
+		<div class="inner-panel">
+			<p class="metrics"><span class="value"><%= '%.2f' % route.kilometers %></span><span class="unit">KM</span></p>
 
-		<p class="name centered-text"><%= route.name %></p>
-		<p class="centered-text"><%= route.details %></p>
-		<%= render :partial => 'shared/pois/contributor_attribution', :locals => { :user => route.users.first, :date => route.updated_at } %>
-	</div>
+			<p class="name centered-text"><%= route.name %></p>
+			<p class="centered-text"><%= route.details %></p>
+			<%= render :partial => 'shared/pois/contributor_attribution', :locals => { :user => route.users.first, :date => route.updated_at } %>
+		</div>
 	
-	<% if editable_route=user_can_edit_route?(current_user, route) %>
-		<%= render :partial => 'shared/pois/common_actions', :locals => {:delete_url => route_path(route), :url => profiles_edit_user_route_path(current_user, route), :condition => editable_route } %>
-	<% else %>
-		<%= render 'shared/pois/common_actions' %>
-	<% end %>
-</div>
+		<% if editable_route=user_can_edit_route?(current_user, route) %>
+			<%= render :partial => 'shared/pois/common_actions', :locals => {:delete_url => route_path(route), :url => profiles_edit_user_route_path(current_user, route), :condition => editable_route } %>
+		<% else %>
+			<%= render 'shared/pois/common_actions' %>
+		<% end %>
+	</div>
+<% end %>
