--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,5 +15,8 @@
  *= require cycle_paths
  *= require fullpage
  *= require trails
+ *= require datepicker
+ *= require datepicker3
+ *= require rickshaw
 */
 
