--- a/app/views/profiles/_reset_tracking_code.html.erb
+++ b/app/views/profiles/_reset_tracking_code.html.erb
@@ -1,4 +1,4 @@
-<% if !current_user.nil? && current_user == user %>
+<% if !current_user.nil? && current_user == user && user.username == "bicito" %>
 	<div class="container">
 
 	<% if user.tracking_number.blank? %>
